--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
+
+<!--module 4 project -->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>
+</title>
+<style>
+body {background-color:#6DD8CB;}
+h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
+p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
+</style>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+<h1></h1>
+<p></p>
 </body>
 </html>
