--- a/default.html
+++ b/default.html
@@ -1,18 +1,34 @@
-
 <!--module 4 project -->
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>
-</title>
-<style>
-body {background-color:#6DD8CB;}
-h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
-p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Favorites</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1></h1>
-<p></p>
+      <h1>My Favorites</h1> 
+	   <div>
+		<section>
+			  <h2>My Favorite Food</h2> 
+			 <h3>Pizza</h3>  
+			<img src = "https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F24%2F2016%2F07%2Fbeef_carpaccio_at_good_food_on_montford_gfom.jpg&q=85">   
+			<p>I just put a random food to be honest</p>   
+		</section>
+		<section>
+			   <h2>My Favorite Animal</h2>
+			  <h3>Dog</h3> 
+			<img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSVACFldpdimIZLjVE5P3Wjs5VzSDnW0uw0A&usqp=CAU">   
+			 <p> I like dogs, specifically pitbulls</p>  
+		</section>
+		<section>
+			  <h2>My Favorite Game</h2> 
+			  <h3>Monopoly</h3> 
+			 <img src = "https://m.media-amazon.com/images/I/81oC5pYhh2L._AC_SL1500_.jpg"> 
+			<p> I dont really like monopoly, this is just the default for this website</p>   
+		</section>
+	</div> 
+
+    <script src="script.js"></script>
 </body>
 </html>
