--- a/default.html
+++ b/default.html
@@ -1,13 +1,12 @@
 <!--module 4 project -->
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Favorites</title>
+    <title>Quick Fix</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-      <h1>My Favorites</h1> 
+      <h1>Quick Fix</h1> 
+	<h2> Our Services</h2>
 	   <div>
 		<section>
 			  <h2>My Favorite Food</h2> 
