--- a/default.html
+++ b/default.html
@@ -17,8 +17,8 @@
 		<section>
 			   <h2>About us</h2>
 			  <h3>Dog</h3> 
-			<img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSVACFldpdimIZLjVE5P3Wjs5VzSDnW0uw0A&usqp=CAU">   
-			 <p> I like dogs, specifically pitbulls</p>  
+			<img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwZUdEsPx2QJJvzLoDIi3ItBfeOfQVwm9cKA&usqp=CAU">   
+			 <button type="button">Services</button>
 		</section>
 		<section>
 			  <h2>Contact Us</h2> 
