--- a/default.html
+++ b/default.html
@@ -1,6 +1,10 @@
 <!--module 4 project -->
-<html lang="en">
 <head>
+	
+img {
+	  max-width: 100%; 
+	margin: 10px auto; 
+}
     <title>Quick Fix</title>
     <link rel="stylesheet" href="style.css">
 </head>
