--- a/default.html
+++ b/default.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>Proj 4</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -59,7 +59,7 @@ body {
 <p>Resize the browser window to see the responsive effect.</p>
 
 <div class="header">
-  <h2>Header</h2>
+  <h2>Quick Fix!</h2>
 </div>
 
 <div class="row">
@@ -68,7 +68,7 @@ body {
   <div class="column" style="background-color:#ccc;">Column</div>
 </div>
 
-<div class="footer">
+<div class="Contact Us">
   <p>Footer</p>
 </div>
 
