--- a/default.html
+++ b/default.html
@@ -5,6 +5,7 @@
 <title>Proj 4</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+  
 <style>
 * {
   box-sizing: border-box;
@@ -12,11 +13,12 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #F9EAE1;
 }
 
 /* Style the header */
 .header {
-  background-color: #f1f1f1;
+  background-color: #F6D8AE;
   padding: 30px;
   text-align: center;
   font-size: 35px;
@@ -39,7 +41,7 @@ body {
 
 /* Style the footer */
 .footer {
-  background-color: #f1f1f1;
+  background-color:#B86F52;
   padding: 10px;
   text-align: center;
 }
@@ -59,9 +61,9 @@ body {
 </div>
 
 <div class="row">
-  <div class="column" style="background-color:#aaa;">Column</div>
-  <div class="column" style="background-color:#bbb;">Column</div>
-  <div class="column" style="background-color:#ccc;">Column</div>
+  <div class="column" style="background-color:#392A16;">Column</div>
+  <div class="column" style="background-color:#A3644B;">Column</div>
+  <div class="column" style="background-color:#392A16;">Column</div>
 </div>
 
 <div class="Contact Us">
