--- a/default.html
+++ b/default.html
@@ -29,7 +29,8 @@ body {
   float: left;
   width: 33.33%;
   padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
+  height: 500px;
+  color: white;/* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
