--- a/default.html
+++ b/default.html
@@ -7,6 +7,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
   
 <style>
+.button1 {
+    background-color:#D6C39D;
+    border-radius: 8px;
+    
+}
 * {
   box-sizing: border-box;
 }
@@ -62,7 +67,7 @@ body {
 </div>
 
 <div class="row">
-  <div class="column" style="background-color:#392A16;">Column</div>
+  <div class="column" style="background-color:#392A16;"><h3>Phone Screen Replacement</h3><p>Click the button below to check out our information on replacing screens!</p></div>
   <div class="column" style="background-color:#A3644B;">Column</div>
   <div class="column" style="background-color:#392A16;">Column</div>
 </div>
