--- a/default.html
+++ b/default.html
@@ -7,11 +7,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
   
 <style>
-.button1 {
-    background-color:#D6C39D;
-    border-radius: 8px;
-    
+img{
+    max-width: 100%;
 }
+
+img.thumbnail{
+    width: 105px;
+    height: 105px;
+    align: center;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -58,6 +63,7 @@ body {
     width: 100%;
   }
 }
+
 </style>
 </head>
 <body>
@@ -67,7 +73,8 @@ body {
 </div>
 
 <div class="row">
-  <div class="column" style="background-color:#392A16;"><h3>Phone Screen Replacement</h3><p>Click the button below to check out our information on replacing screens!</p></div>
+  <div class="column" style="background-color:#392A16;"><h3>Phone Screen Replacement</h3>
+  <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/directly-above-shot-of-broken-smart-phone-on-table-royalty-free-image-1628107427.jpg"></div>
   <div class="column" style="background-color:#A3644B;">Column</div>
   <div class="column" style="background-color:#392A16;">Column</div>
 </div>
