--- a/default.html
+++ b/default.html
@@ -53,7 +53,7 @@ body {
 /* Style the footer */
 .footer {
   background-color:#B86F52;
-  padding: 100px;
+  padding: 10px;
   text-align: center;
 }
 
@@ -75,8 +75,8 @@ body {
 <div class="row">
   <div class="column" style="background-color:#392A16;"><h3>Phone Screen Replacement</h3>
   <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/directly-above-shot-of-broken-smart-phone-on-table-royalty-free-image-1628107427.jpg"></div>
-  <div class="column" style="background-color:#A3644B;">Column</div>
-  <div class="column" style="background-color:#392A16;">Column</div>
+  <div class="column" style="background-color:#A3644B;"><h3>Broken Laptops,Watches, and Tablets</h3><img src = "https://media.karousell.com/media/photos/products/2020/6/13/macbook_air_13inch_2018_broken_1592028809_7210aeca_progressive"></div>
+  <div class="column" style="background-color:#392A16;"><h3> About Us</h3><img src = "https://media.istockphoto.com/vectors/a-person-leaves-a-good-online-review-for-a-product-or-service-vector-vector-id1249627377?k=20&m=1249627377&s=612x612&w=0&h=ROayPZvw6c32iP-GP6I8qyhgL2-6eTrIdZ46ykUSux8="></div>
 </div>
 
 <div class="Contact Us">
