--- a/ProductService.html
+++ b/ProductService.html
@@ -11,12 +11,11 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+   background-color: #F9EAE1;
 }
 
 /* Style the header */
 .header {
-  background-color: #f1f1f1;
-  padding: 30px;
   text-align: center;
   font-size: 35px;
 }
@@ -62,18 +61,21 @@ body {
 </head>
 <body>
 
-<h2>CSS Template using Float</h2>
-<p>In this example, we have created a header, three unequal columns and a footer. On smaller screens, the columns will stack on top of each other.</p>
-<p>Resize the browser window to see the responsive effect.</p>
 
 <div class="header">
-  <h2>Header</h2>
+  <h1>Phone Screen Replacement: </h1>
 </div>
 
 <div class="row">
-  <div class="column side" style="background-color:#aaa;">Column</div>
-  <div class="column middle" style="background-color:#bbb;">Column</div>
-  <div class="column side" style="background-color:#ccc;">Column</div>
+  <div class="column side" style="background-color:#aaa;">
+    
+  
+  
+  
+  
+  </div>
+  <div class="column middle" style="background-color:#A3644B;">Column</div>
+  <div class="column side" style="background-color:#A3644B;">Column</div>
 </div>
 
 <div class="footer">
