--- a/ProductService.html
+++ b/ProductService.html
@@ -69,7 +69,7 @@ body {
   
   </div>
   <div class="column middle" style="background-color:#A3644B;">Column</div>
-  <div class="column side" style="background-color:#A3644C;">Column</div>
+  <div class="column side" style="background-color:#c2836b;">Column</div>
 </div>
 
 <div class="footer">
