--- a/ProductService.html
+++ b/ProductService.html
@@ -24,7 +24,8 @@ body {
 .column {
   float: left;
   padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
+  height: 500px;
+  color: white;/* Should be removed. Only for demonstration */
 }
 
 /* Left and right column */
@@ -61,15 +62,22 @@ body {
 </div>
 
 <div class="row">
-  <div class="column side" style="background-color:#aaa;">
-    
-  
-  
+  <div class="column side" style="background-color:#c2836b;">
+    <h3>We fix Iphones: screen replacement</h3>
+  <p> Our experts understand how to safely take apart your phone with the knowledge of all the innerworkings of it. We will replace LCD screens or simply the glass upon request. The process takes 30 minutes to an hour depending. Our rates are as followed</p>
+    <p>Screen replacement (for Iphone, Samsung, LG, and Google phones only): $50 not including the cost of the replacement</p>
   
   
   </div>
-  <div class="column middle" style="background-color:#A3644B;">Column</div>
-  <div class="column side" style="background-color:#c2836b;">Column</div>
+  <div class="column middle" style="background-color:#A3644B;">
+  <h3>Charging issues</h3>
+    <p>If your phone is having charging issues it can be many reasons, because of this to fix it is split up. </p>
+    <p>Consultation: $5</p>
+    <p>Battery Replacement: $70 (battery included)</p>
+  </div>
+  <div class="column side" style="background-color:#c2836b;">
+  <h3>Unknown or software issues:</h3>
+  </div>
 </div>
 
 <div class="footer">
