--- a/aboutus.html
+++ b/aboutus.html
@@ -13,6 +13,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #F9EAE1;
 }
 
 /* Style the top navigation bar */
@@ -33,39 +34,51 @@ body {
 
 /* Change color on hover */
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: #B86F52;
   color: black;
 }
 
 /* Style the content */
 .content {
-  background-color: #ddd;
+  background-color: #F9EAE1;
   padding: 10px;
-  height: 200px; /* Should be removed. Only for demonstration */
+  height: 300px;   
+}
+img{
+    max-width: 100%;
+    max-height:100px;
+}
+
+img.thumbnail{
+    width: 100px;
+    height: 50px;
+    align: center;
 }
 
 /* Style the footer */
 .footer {
-  background-color: #f1f1f1;
+  background-color: #392A16;
   padding: 10px;
+  color: white;
 }
 </style>
 </head>
 <body>
 
 <div class="topnav">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
+  <a href = "https://projacc331.github.io/phonerepair.github.io/ProductService.html">Screen Replacements</a>
+  <a href="https://projacc331.github.io/phonerepair.github.io/laptops.html">Laptops and other electronics</a>
+  <a href="https://projacc331.github.io/phonerepair.github.io/default.html">Homepage</a>
 </div>
 
 <div class="content">
-  <h2>CSS Template</h2>
-  <p>A topnav, content and a footer.</p>
+  <h2>Who are we?</h2>
+  <p>My Name is Kyla Thomas, I created this business. I have alwayse been really interested in technology in all aspects. When it came to learning about phones and electronics I figured out how much I loved it. I started Quick Fix to help others with their technological issues. So much waste comes from technology, people tossing thier old phones and watches in the trash, but it's more than trash, its a product that always has the possibility to still work!</p>
+  <img src = "https://i.ytimg.com/vi/jFZPIJmier8/maxresdefault.jpg">
 </div>
 
 <div class="footer">
-  <p>Footer</p>
+  <p>Contact Us:
 </div>
 
 </body>
