--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,7 @@ body {
 /* Style the top navigation bar */
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color:#392A16;
 }
 
 /* Style the topnav links */
@@ -78,10 +78,12 @@ img.thumbnail{
 </div>
 
 <div class="footer">
-  <p>Contact Us:
+  <p>Contact Us: at or use this form: </p>
+  <a href = "https://projacc331.github.io/phonerepair.github.io/contact.aspx">Contact Form</a>
 </div>
 
 </body>
 </html>
+
 
 
