--- a/default.html
+++ b/default.html
@@ -13,7 +13,7 @@ img{
 
 img.thumbnail{
     width: 105px;
-    height: 90px;
+    height: 100px;
     align: center;
 }
 
@@ -39,7 +39,7 @@ body {
   float: left;
   width: 33.33%;
   padding: 10px;
-  height: 650px;
+  height: 500px;
   color: white;/* Should be removed. Only for demonstration */
 }
 
@@ -91,9 +91,12 @@ body {
 </div>
 
 <div class="Contact Us">
-
+   <p>Contact Us: </p>
+  <a href = "https://projacc331.github.io/phonerepair.github.io/contact.html">Contact Form</a>
 </div>
 
 </body>
 </html>
+
+
 
