--- a/ProductService.html
+++ b/ProductService.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>Screen Replacements</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -74,17 +74,22 @@ body {
     <p>If your phone is having charging issues it can be many reasons, because of this to fix it is split up. </p>
     <p>Consultation: $5</p>
     <p>Battery Replacement: $70 (battery included)</p>
+    <p>Any other issues aren't on a flat rate and depend case by case</p>
   </div>
   <div class="column side" style="background-color:#c2836b;">
   <h3>Unknown or software issues:</h3>
+  <p>Unfortunately our employees are not specialized in software issues. I would suggest looking at different places like best buy or Apple.</p>
   </div>
 </div>
 
 <div class="footer">
-  <p>Footer</p>
+   <p>Contact Us: </p>
+  <a href = "https://projacc331.github.io/phonerepair.github.io/contact.html">Contact Form</a>
 </div>
 
 </body>
 </html>
+
+
 
 
