--- a/aboutus.html
+++ b/aboutus.html
@@ -78,8 +78,8 @@ img.thumbnail{
 </div>
 
 <div class="footer">
-  <p>Contact Us: at or use this form: </p>
-  <a href = "https://projacc331.github.io/phonerepair.github.io/contact.aspx">Contact Form</a>
+  <p>Contact Us: </p>
+  <a href = "https://projacc331.github.io/phonerepair.github.io/contact.html">Contact Form</a>
 </div>
 
 </body>
