--- a/default.html
+++ b/default.html
@@ -9,7 +9,6 @@
 <style>
 img{
     max-width: 100%;
-    max-height: 90%;
 }
 
 img.thumbnail{
@@ -56,6 +55,7 @@ body {
   background-color:#B86F52;
   padding: 10px;
   text-align: center;
+  color: white;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@@ -91,6 +91,7 @@ body {
   </div>
 </div>
 
+
 <div class="Contact Us">
    <p>Contact Us: </p>
   <a href = "https://projacc331.github.io/phonerepair.github.io/contact.html">Contact Form</a>
@@ -98,6 +99,7 @@ body {
 
 </body>
 </html>
+
 
 
 
