--- a/default.html
+++ b/default.html
@@ -9,7 +9,6 @@
 <style>
 img{
     max-width: 100%;
-  max-height: 80%;
 }
 
 img.thumbnail{
@@ -53,7 +52,7 @@ body {
 
 /* Style the footer */
 .footer {
-  background-color:#B86F52;
+  background-color:#f6d8ae;
   padding: 10px;
   text-align: center;
   color: white;
@@ -100,6 +99,7 @@ body {
 
 </body>
 </html>
+
 
 
 
