--- a/default.html
+++ b/default.html
@@ -8,13 +8,15 @@
   
 <style>
 img{
-    max-width: 100%;
+    max-width: 90%;
+    max-height: 75%
+      align: center;
 }
 
 img.thumbnail{
     width: 105px;
     height: 100px;
-    align: center;
+    
 }
 
 * {
